# vault

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
.claude/: settings.local.json
00-项目/: 实施计划.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: categories.rs  entries.rs  mod.rs  settings.rs  tags.rs  utils.rs  vault.rs
src-tauri/src/crypto/: cipher.rs  key.rs  mod.rs
src-tauri/src/db/: categories.rs  entries.rs  mod.rs  settings.rs  tags.rs
src-tauri/src/models/: category.rs  entry.rs  mod.rs  tag.rs  vault.rs
src/components/categories/: CategoryList.tsx
src/components/entries/: EntryCard.tsx  EntryForm.tsx  EntryList.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/search/: SearchBar.tsx
src/components/shared/: ChangePasswordDialog.tsx  ConfirmDialog.tsx  ExportDialog.tsx  ImportDialog.tsx  PasswordField.tsx  PasswordGenerator.tsx  SettingsDialog.tsx  Toast.tsx
src/components/tags/: TagSelector.tsx
src/components/vault/: CreateVaultScreen.tsx  UnlockScreen.tsx  VaultGate.tsx
src/contexts/: EntryContext.tsx  UIContext.tsx  VaultContext.tsx
src/hooks/: useAutolock.ts
src/types/: index.ts
